--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    animation: fade-in .4s;
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
@@ -28,4 +29,27 @@
             margin: 2rem 0;
         }
     }
+}
+
+.addUserBtn {
+    position: fixed;
+    left: 2rem;
+    bottom: 2rem;
+    width: 4rem !important;
+    height: 4rem !important;
+    animation: tilt-shaking .4s infinite;
+    z-index: 999;
+}
+
+@keyframes tilt-shaking {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(10deg); }
+    50% { transform: rotate(0eg); }
+    75% { transform: rotate(-10deg); }
+    100% { transform: rotate(0deg); }
+}
+
+@keyframes fade-in {
+    0% {transform: scale(.4); opacity: 0;}
+    100% {transform: scale(1); opacity: 1;}
 }
